--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,28 @@
-/* здесь используйте глобальные переменные */
+$primary-font: "Lato", "Arial", sans-serif;
+$secondary-font: "Oswald", "Tahoma", sans-serif;
+
+$basic-text-color: #444444;
+$bg-theme: #68b738;
+$bg-light-theme: #eaeaea;
+$light-text-color: #ffffff;
+$second-text-color: #000000;
+$dark-grey-color: #222222;
+$border-color: #cdcdcd;
+$basic-grey: #f2f2f2;
+$second-dark: #111111;
+$border-light: #ebebeb;
+$border-light-2: #d9d9d9;
+$border-light-3: #e7e7e7;
+$icon-grey: #666666;
+$gradient-bg: rgba(104, 183, 56, 0.85);
+$gradient-bg-2: #3e3d42;
+$gradient-bg-mobile-1: #525156;
+$gradient-bg-mobile-2: #444348;
+$bg-theme-2: #5eaa2f;
+$active-btn-color: rgba(255, 255, 255, 0.6);
+
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$max-mobile-width: 767px;
+
+$curtain-place: 0.5;
